--- a/lsystem/index.html
+++ b/lsystem/index.html
@@ -13,7 +13,7 @@
 <body>
   <script src="../libs/p5.min.js"></script>
   <script src="../libs/p5.dom.min.js"></script>
-  <!-- <script src="./app.js"></script> -->
-  <script src="./app3.js"></script>
+  <!-- <script src="./app3.js"></script> -->
+  <script src="./app.js"></script>
 </body>
 </html>
