clear the sketches

--- a/phyllotaxis/index.html
+++ b/phyllotaxis/index.html
@@ -17,7 +17,11 @@
   <script src="../libs/obj-exporter.js"></script>
   <script src="../libs/FileSaver.min.js"></script>
   <script src="../libs/utilities.js"></script>
-  <script src="./app.js"></script>
+
+
+
+
+  <script src="./index.js"></script>
   <!-- <script src="./app3D.js"></script> -->
 </body>
 </html>
